# compute-engine

./: .gitignore  .gitmodules  :w  CMakeLists.txt  Makefile  README.md  calculator.cpp  calculator_test.cc  evaluator.cpp  firebase.json  package-lock.json  package.json  svelte.config.js  vite.config.ts  vite.config.ts.timestamp-1673048322734.mjs
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/: .gitignore  alpha.js
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/: start-2c9bffaf.js  start-93081e2a.js  start-9f7be75b.js  start-b22ba9b8.js
.svelte-kit/output/client/_app/immutable/assets/: _page-a46d94f0.css  _page-b4ab8b99.css
.svelte-kit/output/client/_app/immutable/chunks/: 0-5cea339f.js  0-bb8ac31e.js  1-3cfd69ed.js  1-d67e83dd.js  2-0ab21c3e.js  2-6f9f1362.js  2-954eef99.js  2-b86b4669.js  index-6a92d7be.js  index-e02e35d2.js  singletons-2157a179.js  singletons-753cc5c4.js
.svelte-kit/output/server/: manifest-full.js  manifest.js
.svelte-kit/output/server/chunks/: hooks.server.js  index.js  index2.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
alpha/: .gitignore  alpha.cpp  engine.cpp  lexer.c  lexer.h  lexer.l  parser.y
public/: calculator.wasm  index.html  tailwind.css
src/: app.css  app.html  calculator.cpp  evaluator.cpp  hooks.server.js  math.cpp  token_stream.cpp
src/lib/: app.ts  cell.svelte  database.js  mathfield.svelte  mathinput.svelte  natural-language-input.svelte
src/routes/: +page.svelte
tests/: CalculatorTest.cpp
(+8 files in other folders)
